Fix border for dark mode

--- a/resources/css/components/fieldtypes/grid.css
+++ b/resources/css/components/fieldtypes/grid.css
@@ -108,7 +108,7 @@
 /* Stacked UI mode */
 .grid-stacked [data-asset-browser]:not(:has([data-asset-picker])) {
     /* Wrap a border around the container instead of dealing with complex nested table elements, because borders and border-radius don't work as expected with nested table elements */
-    @apply border-gray-300 border-1 rounded-lg;
+    @apply border-gray-300 dark:border-gray-700 border-1 rounded-lg;
     /* Prevent the descended table elements from inheriting this, such as the img thumbnail and the delete button */
     *:not(button, button *) {
         @apply rounded-lg border-none;
